2015-09-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_calloc.c,
	* device/lib/_free.c,
	* device/lib/_heap.c,
	* device/lib/_malloc.c,
	* device/lib/_realloc.c: renamed all _sdcc_* to __sdcc_*,
	  removed register keywords,
	  changed _sdcc_heap_size to __sdcc_last_memheader,
	  removed init_dynamic_memory() and other optimizations
	* support/regression/tests/malloc.c: added test for size overflow

2015-09-21 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/gcc-torture-execute-pr28982a.c:
	  Enabled for the r2k and r3ka ports.

2015-09-20 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/z80/gen.c:
	  Fix bugs in genOr() and genXor() while operands are longlong.
	* support/regression/tests/longlong.c:
	  Enable more tests.

2015-09-16 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y:
	* src/SDCCast.c:
	* src/SDCCerr.c:
	* src/SDCCicode.c:
	  Disable nested critical block / function call, support return in inline critical functions.
	* support/regression/tests/critical.c:
	  Improve test case.
	* support/regression/tests/malloc.c:
	  fix a small spot.

2015-09-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/malloc.c:
	  More testing of memory management.

2015-09-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/malloc.c:
	  More testing of memory management.

2015-09-13 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pic16/*
	  Fix delarations to make pic16 lib compile again.

2015-09-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/pic14/genarith.c:
	  Fix bug #2417 by applying patch by Juho Salminen.

2015-09-10 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2385.c:
	  Regression test for bug #2385.

2015-09-10 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/critical.c:
	  Improve test case.
	* src/SDCC.y:
	  Fix a bug: inline critical functions are inlined as non-critical.

2015-09-09 Philipp Klaus Krause <pkk AT spth.de>
